--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -25,8 +25,18 @@ jobs:
           optimize: svg
           experimental_features: --optimize-svg
           plugin_gists: yes
+          plugin_languages: yes
+          plugin_languages_ignored: >-
+            html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
+            gnuplot
+          plugin_languages_details: bytes-size, percentage
+          plugin_languages_limit: 4
           plugin_habits: yes
           plugin_habits_charts: yes
+          plugin_habits_days: 30
+          plugin_habits_trim: yes
+          plugin_habits_from: 500
+          plugin_habits_languages_limit: 0
           plugin_wakatime: yes
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
           plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
