--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -56,18 +56,11 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
-          plugin_music: yes
-          plugin_music_limit: 4
-          plugin_music_mode: top
-          plugin_music_provider: spotify
-          plugin_music_time_range: short
-          plugin_music_top_type: tracks
-          plugin_music_user: thelittolprince
-          plugin_wakatime: yes
-          plugin_wakatime_days: 7
-          plugin_wakatime_languages_ignored: html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot
-          plugin_wakatime_limit: 5
-          plugin_wakatime_repositories_visibility: all
-          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
-          plugin_wakatime_url: https://wakatime.com
-          plugin_wakatime_user: thelittolprince
+          # plugin_wakatime: yes
+          # plugin_wakatime_days: 7
+          # plugin_wakatime_languages_ignored: html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot
+          # plugin_wakatime_limit: 5
+          # plugin_wakatime_repositories_visibility: all
+          # plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
+          # plugin_wakatime_url: https://wakatime.com
+          # plugin_wakatime_user: thelittolprince
